# pandss

./: .condarc  .flake8  .gitignore  404.html  MANIFEST.in  README.md  build_all.bat  coverage.json  dev_environment.yaml  environment.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  sitemap.xml  test_environment.yaml
.github/workflows/: conda-build.yml
api/: index.html
conda-recipe/: build.sh  conda_build_config.yaml  meta.yaml
docs/: api.md  examples.md  explanation.md  how_to.md  index.md  quickstart.md  tutorials.md
examples/: index.html
explanation/: index.html
heclib/: __init__.py  api.py  dates.py  decorators.py  dll.py  dss.py  errors.py
how_to/: index.html
pandss/: __init__.py  catalog.py  catalog_object.py  dss.py  errors.py  keywords.py  paths.py  quiet.py  read.py  reshape.py  timeseries.py  types.py  utils.py
pandss/engines/: __init__.py  pydsstools_engine.py  pyhecdss_engine.py
pandss/heclib/: __init__.py  api.py  dates.py  decorators.py  dll.py  dss.py  dss_handle.py  errors.py
pandss/timeseries/: interval.py  period_type.py  regular_timeseries.py
pandss/units/: __init__.py  pandss_units.pint
quickstart/: index.html
src/pandss/: __init__.py  catalog.py  dss.py  errors.py  paths.py  quiet.py  utils.py
src/pandss/engines/: __init__.py  hec_dss_python_engine.py  pydsstools_engine.py  pyhecdss_engine.py
src/pandss/paths/: __init__.py  (+3 more)
tests/: conftest.py  test_catalog.py  test_dss.py  test_heclib.py  test_interval.py  test_paths.py  test_pint.py  test_rts.py  test_write.py
tutorials/: index.html
(+7 files in other folders)
