[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pandss"
version = "0.8.1"
dependencies = [
    "pyhecdss==1.3",
    "pandas==2",
    "packaging==23",
    "tabulate==0.9"
]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib", 
    "--strict-markers",
]
pythonpath = "./src"
